<resources>
    <string name="app_name">My Application_test1</string>
    <string name="login_by_password">密码登录</string>
    <string name="login_by_verifycode">验证码登录</string>
    <string name="phone_number">手机号码：</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="login_password">登录密码：</string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登      录</string>
    <string name="input_new_password">输入新密码：</string>
    <string name="input_new_password_hint">输入新密码</string>
    <string name="input_new_password_again">确认新密码：</string>
    <string name="input_new_password_again_hint">请再次输入密码</string>
    <string name="verifycode">验证码：&#160; &#160;</string>
    <string name="input_verifycode">请输入验证码</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="done">确      定</string>
</resources>